# lollipop

./: Cargo.toml  README.md
example/: Cargo.toml
example/app/: bootstrap.js  index.js  package-lock.json  package.json  webpack.config.js
example/src/: app.rs  lib.rs
src/: action.rs  api.rs  diff.rs  draw.rs  events.rs  lib.rs  patch.rs  utils.js  utils.rs
src/nodes/: element.rs  mod.rs  node.rs  text.rs  widget.rs
