[package]
name = "lollipop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.8"
js-sys = "0.3.6"
wasm-bindgen-futures = "0.4.34"
wasm-rs-async-executor = "0.9.0"

[dependencies.web-sys]
version = "0.3.6"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Text',
  'Event'
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
